--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,22 @@
 {
-    "name": "yiisoft/_____",
+    "name": "yiisoft/validator-rule-handler-container",
     "type": "library",
-    "description": "_____",
+    "description": "Validator rule handler container based on \"yiisoft/factory\"",
     "keywords": [
-        "_____"
+        "validator",
+        "handler",
+        "container",
+        "factory"
     ],
     "homepage": "https://www.yiiframework.com/",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/yiisoft/_____/issues?state=open",
+        "issues": "https://github.com/yiisoft/validator-rule-handler-container/issues?state=open",
         "forum": "https://www.yiiframework.com/forum/",
         "wiki": "https://www.yiiframework.com/wiki/",
         "irc": "irc://irc.freenode.net/yii",
         "chat": "https://t.me/yii3en",
-        "source": "https://github.com/yiisoft/_____"
+        "source": "https://github.com/yiisoft/validator-rule-handler-container"
     },
     "funding": [
         {
@@ -28,22 +31,27 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^8.0",
+        "psr/container": "^1.0|^2.0",
+        "yiisoft/definitions": "^1.0",
+        "yiisoft/factory": "^1.0",
+        "yiisoft/validator": "dev-refactoring-v2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "roave/infection-static-analysis-plugin": "^1.16",
         "spatie/phpunit-watcher": "^1.23",
-        "vimeo/psalm": "^4.18"
+        "vimeo/psalm": "^4.18",
+        "yiisoft/test-support": "^1.4"
     },
     "autoload": {
         "psr-4": {
-            "Yiisoft\\_____\\": "src"
+            "Yiisoft\\Validator\\Rules\\Container\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Yiisoft\\_____\\Tests\\": "tests"
+            "Yiisoft\\Validator\\Rules\\Container\\Tests\\": "tests"
         }
     },
     "config": {
@@ -51,6 +59,15 @@
         "allow-plugins": {
             "infection/extension-installer": true,
             "composer/package-versions-deprecated": true
+        }
+    },
+    "extra": {
+        "config-plugin-options": {
+            "source-directory": "config"
+        },
+        "config-plugin": {
+            "params": "params.php",
+            "common": "common.php"
         }
     },
     "scripts": {
