--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,7 +18,7 @@
     </php>
 
     <testsuites>
-        <testsuite name="Yii _____ tests">
+        <testsuite name="Yii Validator Rule Handler Container tests">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
