--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "require": {
         "php": "^8.0",
         "psr/container": "^1.0|^2.0",
-        "yiisoft/definitions": "^1.0",
+        "yiisoft/definitions": "^1.0|^2.0",
         "yiisoft/factory": "^1.0",
         "yiisoft/validator": "dev-refactoring-v2"
     },
