--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "psr/container": "^1.0|^2.0",
         "yiisoft/definitions": "^1.0|^2.0",
         "yiisoft/factory": "^1.0",
-        "yiisoft/validator": "dev-refactoring-v2"
+        "yiisoft/validator": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
